// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={true}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "purple",
        },
        {},
        {
          "padding": 10,
        },
      ],
    ]
  }
  testID="testButton"
  testOnly_onPress={[Function]}
>
  <Text
    style={
      [
        {
          "color": "yellow",
          "fontSize": 18,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        [
          {
            "textAlign": "left",
          },
        ],
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={false}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#D1EBFE",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={false}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#D1EBFE",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
>
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={false}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#D1EBFE",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
>
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={true}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#156FF5",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
  testOnly_onPress={[Function]}
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={true}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
  testOnly_onPress={[Function]}
>
  <Text
    style={
      [
        {
          "color": "#2F343D",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  collapsable={false}
  enabled={true}
  hitSlop={
    {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  rippleColor="transparent"
  style={
    [
      {},
      [
        {
          "alignSelf": "center",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#156FF5",
        },
        {},
        undefined,
      ],
    ]
  }
  testID="testButton"
  testOnly_onPress={[Function]}
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 18,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;
